# mri-simulator

./: README.md  config.ini  main.py  pyproject.toml  setup.py
.github/actions/install-psychopy/: action.yaml
.github/workflows/: build.yml  code-style.yaml  code-style.yml  pytest.yaml  pytest.yml
mrisim/: __init__.py  config.ini  main.py  simulate.py
mrisim/commands/: mrisim.py
mrisim/config/: __init__.py  config.ini  config.py
mrisim/config/tests/: test_config.py
mrisim/config/tests/data/: config_invalid_1.ini  config_invalid_2.ini  config_invalid_3.ini  config_invalid_4.ini  config_invalid_5.ini  config_valid.ini
mrisim/utils/: _checks.py  _docs.py  logs.py
mrisim/utils/tests/: test_checks.py  test_logs.py
