[build-system]
requires = ['setuptools >= 61.0.0']
build-backend = 'setuptools.build_meta'

[project]
name = 'mrisim'
version = '0.1.0'
description = 'Simulate the triggers sent by the MRI (key pressed).'
readme = 'README.md'
license = {file = 'LICENSE'}
requires-python = '>=3.9'
authors = [
    {name = 'Arnaud Desvachez', email = 'arnaud.desvachez@gmail.com'},
]
maintainers = [
    {name = 'Mathieu Scheltienne', email = 'mathieu.scheltienne@fcbg.ch'},
]
keywords = [
    'python',
    'neuroscience',
    'mri',
]
classifiers = [
    'Operating System :: Microsoft :: Windows',
    'Operating System :: Unix',
    'Operating System :: MacOS',
    'Programming Language :: Python :: 3 :: Only',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Natural Language :: English',
    'License :: OSI Approved :: MIT License',
]
dependencies = [
    'keyboard',
    'numpy>=1.21',
    'packaging',
    'psutil',
]

[project.optional-dependencies]
build = [
    'build',
    'twine',
]
style = [
    'black',
    'codespell',
    'isort',
    'pydocstyle[toml]',
    'ruff',
]
test = [
    'pytest',
    'pytest-cov',
    'pytest-timeout',
]
all = [
    'mrisim[build]',
    'mrisim[doc]',
    'mrisim[style]',
    'mrisim[test]',
]
full = [
    'mrisim[all]',
]

[project.urls]
homepage = 'https://github.com/fcbg-hnp-meeg/mri-simulator/'
documentation = 'https://github.com/fcbg-hnp-meeg/mri-simulator'
source = 'https://github.com/fcbg-hnp-meeg/mri-simulator'
tracker = 'https://github.com/fcbg-hnp-meeg/mri-simulator/issues'

[project.scripts]
mrisim = 'mrisim.commands.mrisim:run'
mrisim-sys_info = 'mrisim.commands.sys_info:run'

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
include = ['mrisim*']
exclude = ['mrisim*tests']

[tool.black]
line-length = 79
target-version = ['py39']
include = '\.pyi?$'
extend-exclude = '''
(
      __pycache__
    | .github
    | .ruff_cache
    | setup.py
)
'''

[tool.isort]
profile = 'black'
multi_line_output = 3
line_length = 79
py_version = 39
extend_skip_glob = [
    'setup.py',
]

[tool.pydocstyle]
convention = 'numpy'
ignore-decorators = '(copy_doc|property|.*setter|.*getter|pyqtSlot|Slot)'
match = '^(?!setup|__init__|test_).*\.py'
match-dir = '^mrisim.*'
add_ignore = 'D100,D104,D107'

[tool.ruff]
line-length = 79
extend-exclude = [
    "doc",
    "setup.py",
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.pytest.ini_options]
minversion = '6.0'
addopts = '--durations 20 --junit-xml=junit-results.xml --verbose'
filterwarnings = []

[tool.coverage.run]
branch = true
cover_pylib = false
omit = [
    '**/__init__.py',
    '**/mrisim/_version.py',
    '**/mrisim/commands/*',
    '**/mrisim/utils/_fixes.py',
    '**/tests/**',
]

[tool.coverage.report]
exclude_lines = [
    'pragma: no cover',
    'if __name__ == .__main__.:',
]
precision = 2
